update Google Analytics Tags (2) at index.html files

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,13 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JK5KTPW2M9"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RVXBR0H3TY"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
 
-      gtag('config', 'G-JK5KTPW2M9');
+      gtag('config', 'G-RVXBR0H3TY');
     </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
