--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="description"
+      content="Welcome to the Neuroscience Research Center in Thailand at KMUTT. Learn about neurotechnology applications, mental well-being, and cutting-edge methods for lifelong learning in the field of neuroscience.">
+    <meta name="keywords"
+      content="Neuroscience Research Center Thailand, NX King Mongkut's Technology Thonburi, Neurotechnology KMUTT, Mental Well-being Neuroscience Thailand, Lifelong Learning Neuroscience, Cutting-edge Neuroscience Methods Thailand">
+    <meta name="robots" content="index,follow">
+    <meta name="google-site-verification" content="7MaLOxw1iijQoAzM2ce7uyl8fipQ7Yz7m6-5Zu3Ttpg" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,7 +41,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>nxkmutt</title>
+    <title>Neuroscience Center for Research and Innovation (NX) at King Mongkut's University of Technology Thonburi</title>
   </head>
   <body>
     <noscript><div class=""></div></noscript>
