Fix issues - 7 May 2024

--- a/public/index.html
+++ b/public/index.html
@@ -1,52 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" href="/nxkmutt/src/Images/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <meta name="description"
-      content="Welcome to the Neuroscience Research Center in Thailand at KMUTT. Learn about neurotechnology applications, mental well-being, and cutting-edge methods for lifelong learning in the field of neuroscience.">
-    <meta name="keywords"
-      content="Neuroscience Research Center Thailand, NX King Mongkut's Technology Thonburi, Neurotechnology KMUTT, Mental Well-being Neuroscience Thailand, Lifelong Learning Neuroscience, Cutting-edge Neuroscience Methods Thailand">
-    <meta name="robots" content="index,follow">
-    <meta name="google-site-verification" content="7MaLOxw1iijQoAzM2ce7uyl8fipQ7Yz7m6-5Zu3Ttpg" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--
+<head>
+  <meta charset="utf-8" />
+  <link rel="apple-touch-icon" href="/nxkmutt/src/Images/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description"
+    content="Welcome to the Neuroscience Research Center in Thailand at KMUTT. Learn about neurotechnology applications, mental well-being, and cutting-edge methods for lifelong learning in the field of neuroscience.">
+  <meta name="keywords"
+    content="Neuroscience Research Center Thailand, NX King Mongkut's Technology Thonburi, Neurotechnology KMUTT, Mental Well-being Neuroscience Thailand, Lifelong Learning Neuroscience, Cutting-edge Neuroscience Methods Thailand">
+  <meta name="robots" content="index,follow">
+  <meta name="google-site-verification" content="7MaLOxw1iijQoAzM2ce7uyl8fipQ7Yz7m6-5Zu3Ttpg" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See http://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RVXBR0H3TY"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RVXBR0H3TY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-      gtag('config', 'G-RVXBR0H3TY');
-    </script>
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    gtag('config', 'G-RVXBR0H3TY');
+  </script>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-TQQF2PJH');</script>
+  <!-- End Google Tag Manager -->
+  <title>Neuroscience Center for Research and Innovation (NX) at King Mongkut's University of Technology Thonburi
+  </title>
+</head>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Neuroscience Center for Research and Innovation (NX) at King Mongkut's University of Technology Thonburi</title>
-  </head>
-  <body>
-    <noscript><div class=""></div></noscript>
-    <div id="root"></div>
-    <!--
+<body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQQF2PJH" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
+  <noscript>
+    <div class=""></div>
+  </noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -56,5 +64,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
