--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="apple-touch-icon" href="/nxkmutt/src/Images/nxicon.png" /> -->
+  <!-- meta tags  -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
   <meta name="description"
     content="Welcome to the Neuroscience Research Center in Thailand at KMUTT. Learn about neurotechnology applications, mental well-being, and cutting-edge methods for lifelong learning in the field of neuroscience.">
   <meta name="keywords"
     content="Neuroscience Research Center Thailand, NX King Mongkut's Technology Thonburi, Neurotechnology KMUTT, Mental Well-being Neuroscience Thailand, Lifelong Learning Neuroscience, Cutting-edge Neuroscience Methods Thailand">
-  <meta name="robots" content="index,follow">
   <meta name="google-site-verification" content="7MaLOxw1iijQoAzM2ce7uyl8fipQ7Yz7m6-5Zu3Ttpg" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See http://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+<title>Neuroscience Center for Research and Innovation (NX) at King Mongkut's University of Technology Thonburi
+</title>
+ 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-RVXBR0H3TY"></script>
   <script>
@@ -30,6 +26,7 @@
 
     gtag('config', 'G-RVXBR0H3TY');
   </script>
+
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
@@ -40,8 +37,8 @@
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-TQQF2PJH');</script>
   <!-- End Google Tag Manager -->
-  <title>Neuroscience Center for Research and Innovation (NX) at King Mongkut's University of Technology Thonburi
-  </title>
+  
+  
 </head>
 
 <body>
