update meta tags on index.html - 8 May 2024 (2)

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <!-- meta tags  -->
@@ -12,9 +13,9 @@
   <meta name="google-site-verification" content="7MaLOxw1iijQoAzM2ce7uyl8fipQ7Yz7m6-5Zu3Ttpg" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Neuroscience Center for Research and Innovation (NX) at King Mongkut's University of Technology Thonburi
-</title>
- 
+  <title>Neuroscience Center for Research and Innovation (NX) at King Mongkut's University of Technology Thonburi
+  </title>
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <!-- Google tag (gtag.js) -->
@@ -23,7 +24,6 @@
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'G-RVXBR0H3TY');
   </script>
 
@@ -37,8 +37,16 @@
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-TQQF2PJH');</script>
   <!-- End Google Tag Manager -->
-  
-  
+
+  <!-- Structured data markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://nx.kmutt.ac.th/",
+    "name": "NX KMUTT"
+  }
+  </script>
 </head>
 
 <body>
